--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <title>Tweet test</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="public/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
 
@@ -52,11 +52,11 @@
     <!-- /.container -->
 
     <!-- jQuery -->
-    <script src="public/js/jquery.js"></script>
-    <script src="public/js/action.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/action.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="public/js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 
     <!-- Script to Activate the Carousel -->
 
