--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1>Post tweet</h1>
-                <form method = "post" action = "https://tweet-test4.herokuapp.com:5000/post">
+                <form method = "post" action = "http://localhost:5000/post">
                   <textarea id = "message" name = "message"></textarea><br><br>
                   <button id = "post" class = "btn-success">Post</button>
                 </form>
